--- a/bike_rental_domain/pom.xml
+++ b/bike_rental_domain/pom.xml
@@ -12,5 +12,11 @@
 
     <artifactId>bike_rental_domain</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.14.RELEASE</version>
+        </dependency>
+    </dependencies>
 </project>
