--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,11 @@
     <artifactId>BikeRental</artifactId>
     <version>1.0-SNAPSHOT</version>
     <url>www.jakubgajewski.pl</url>
-    <description>pl.jg.bike_rental.domain.Bike Rental Application</description>
+    <description>Bike Rental Application</description>
     <packaging>pom</packaging>
     <modules>
         <module>bike_rental_domain</module>
         <module>bike_rental_application</module>
-        <module>bike_rental_webapp</module>
         <module>bike_rental_webapp</module>
         <!--<module>bike_rental_webapp</module>-->
     </modules>
