--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,181 @@
-# Created by .ignore support plugin (hsz.mobi)
+
+# Created by https://www.gitignore.io/api/windows,intellij
+# Edit at https://www.gitignore.io/?templates=windows,intellij
+
+### Intellij ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+# Generated files
+.idea/**/contentModel.xml
+
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
+
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
+
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+# .idea/modules.xml
+# .idea/*.iml
+# .idea/modules
+
+# CMake
+cmake-build-*/
+
+# Mongo Explorer plugin
+.idea/**/mongoSettings.xml
+
+# File-based project format
+*.iws
+
+# IntelliJ
+out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Cursive Clojure plugin
+.idea/replstate.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+# Editor-based Rest Client
+.idea/httpRequests
+
+# Android studio 3.1+ serialized cache file
+.idea/caches/build_file_checksums.ser
+
+### Intellij Patch ###
+# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
+
+# *.iml
+# modules.xml
+# .idea/misc.xml
+# *.ipr
+
+# Sonarlint plugin
+.idea/sonarlint
+
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# End of https://www.gitignore.io/api/windows,intellij
+
+application.properties
+.idea/artifacts/
+.idea/compiler.xml
+.idea/libraries/Maven__com_google_guava_guava_19_0.xml
+.idea/libraries/Maven__commons_codec_commons_codec_1_11.xml
+.idea/libraries/Maven__commons_io_commons_io_2_5.xml
+.idea/libraries/Maven__commons_logging_commons_logging_1_2.xml
+.idea/libraries/Maven__org_apache_maven_maven_aether_provider_3_0.xml
+.idea/libraries/Maven__org_apache_maven_maven_artifact_3_0.xml
+.idea/libraries/Maven__org_apache_maven_maven_core_3_0.xml
+.idea/libraries/Maven__org_apache_maven_maven_model_3_0.xml
+.idea/libraries/Maven__org_apache_maven_maven_model_builder_3_0.xml
+.idea/libraries/Maven__org_apache_maven_maven_plugin_api_3_0.xml
+.idea/libraries/Maven__org_apache_maven_maven_repository_metadata_3_0.xml
+.idea/libraries/Maven__org_apache_maven_maven_settings_3_0.xml
+.idea/libraries/Maven__org_apache_maven_maven_settings_builder_3_0.xml
+.idea/libraries/Maven__org_apache_maven_plugins_maven_shade_plugin_3_2_0.xml
+.idea/libraries/Maven__org_apache_maven_shared_maven_artifact_transfer_0_10_0.xml
+.idea/libraries/Maven__org_apache_maven_shared_maven_common_artifact_filters_3_0_1.xml
+.idea/libraries/Maven__org_apache_maven_shared_maven_dependency_tree_2_2.xml
+.idea/libraries/Maven__org_apache_maven_shared_maven_shared_utils_3_1_0.xml
+.idea/libraries/Maven__org_codehaus_plexus_plexus_classworlds_2_2_3.xml
+.idea/libraries/Maven__org_codehaus_plexus_plexus_component_annotations_1_5_5.xml
+.idea/libraries/Maven__org_codehaus_plexus_plexus_interpolation_1_14.xml
+.idea/libraries/Maven__org_codehaus_plexus_plexus_utils_3_1_0.xml
+.idea/libraries/Maven__org_eclipse_aether_aether_util_0_9_0_M2.xml
+.idea/libraries/Maven__org_jdom_jdom2_2_0_6.xml
+.idea/libraries/Maven__org_ow2_asm_asm_6_2_1.xml
+.idea/libraries/Maven__org_ow2_asm_asm_analysis_6_2_1.xml
+.idea/libraries/Maven__org_ow2_asm_asm_commons_6_2_1.xml
+.idea/libraries/Maven__org_ow2_asm_asm_tree_6_2_1.xml
+.idea/libraries/Maven__org_ow2_asm_asm_util_6_2.xml
+.idea/libraries/Maven__org_slf4j_slf4j_api_1_7_5.xml
+.idea/libraries/Maven__org_sonatype_aether_aether_api_1_7.xml
+.idea/libraries/Maven__org_sonatype_aether_aether_impl_1_7.xml
+.idea/libraries/Maven__org_sonatype_aether_aether_spi_1_7.xml
+.idea/libraries/Maven__org_sonatype_aether_aether_util_1_7.xml
+.idea/libraries/Maven__org_sonatype_plexus_plexus_cipher_1_4.xml
+.idea/libraries/Maven__org_sonatype_plexus_plexus_sec_dispatcher_1_3.xml
+.idea/libraries/Maven__org_sonatype_sisu_sisu_guice_noaop_2_1_7.xml
+.idea/libraries/Maven__org_sonatype_sisu_sisu_inject_bean_1_4_2.xml
+.idea/libraries/Maven__org_sonatype_sisu_sisu_inject_plexus_1_4_2.xml
+.idea/libraries/Maven__org_springframework_spring_aop_4_3_14_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_aop_4_3_16_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_beans_4_3_14_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_beans_4_3_16_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_context_4_3_14_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_context_4_3_16_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_core_4_3_14_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_core_4_3_16_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_expression_4_3_14_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_expression_4_3_16_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_web_4_3_16_RELEASE.xml
+Would
+remove .idea/libraries/Maven__org_springframework_spring_webmvc_4_3_16_RELEASE.xml
+.idea/libraries/Maven__org_vafer_jdependency_2_0.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
+BikeRental.iml
+bike_rental_application/bike_rental_application.iml
+bike_rental_application/dependency-reduced-pom.xml
+bike_rental_application/src/test/
+bike_rental_application/target/
+bike_rental_domain/bike_rental_domain.iml
+bike_rental_domain/src/main/resources/
+bike_rental_domain/src/test/
+bike_rental_domain/target/
+bike_rental_webapp/bike_rental_webapp.iml
+bike_rental_webapp/target/
