CRUD operations and views update

--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,8 @@
         <module>bike_rental_webapp</module>
         <!--<module>bike_rental_webapp</module>-->
     </modules>
-
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
