--- a/bike_rental_application/pom.xml
+++ b/bike_rental_application/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>spring-core</artifactId>
             <version>4.3.16.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>javax.transaction-api</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
 
